2025-06-16T00:57:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15669370885 # 676
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-16
* notice: last 14d: unq all: 6 10
* notice: prev accum: outdated-unq outdated-all / unq all: 443 1453 / 448 1462
* notice: next accum: outdated-unq outdated-all / unq all: 443 1453 / 449 1463
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-06-15]

2025-06-11T00:55:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15573492189 # 671
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-11
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 443 1453 / 447 1460
* notice: next accum: outdated-unq outdated-all / unq all: 443 1453 / 448 1462
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-06-10]

2025-06-10T00:55:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15548014150 # 670
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-10
* notice: last 14d: unq all: 4 7
* notice: prev accum: outdated-unq outdated-all / unq all: 442 1452 / 446 1458
* notice: next accum: outdated-unq outdated-all / unq all: 443 1453 / 447 1460
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-05-26] / [2025-06-09]

2025-06-08T00:59:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15513336337 # 668