@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-16T00:57:20Z",
-  "count_outdated" : 1453,
-  "uniques_outdated" : 443,
-  "count" : 1463,
-  "uniques" : 449,
+  "timestamp" : "2025-06-17T00:55:18Z",
+  "count_outdated" : 1456,
+  "uniques_outdated" : 444,
+  "count" : 1464,
+  "uniques" : 450,
   "views" : [
-    {
-      "timestamp": "2025-06-02T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-04T00:00:00Z",
       "count": 1,
@@ -52,6 +43,15 @@
     },
     {
       "timestamp": "2025-06-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
