@@ -1,12 +1,7 @@
 {
-  "count": 10,
+  "count": 8,
   "uniques": 6,
   "views": [
-    {
-      "timestamp": "2025-06-02T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-06-04T00:00:00Z",
       "count": 1,
@@ -29,6 +24,11 @@
     },
     {
       "timestamp": "2025-06-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-06-16T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
