@@ -1,3 +1,12 @@
+2025-06-17T00:55:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15695384180 # 677
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-17
+* notice: last 14d: unq all: 6 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 443 1453 / 449 1463
+* notice: next accum: outdated-unq outdated-all / unq all: 444 1456 / 450 1464
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-06-02] / [2025-06-16]
+
 2025-06-16T00:57:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15669370885 # 676
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-16
